styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
body {
    font-family: 'Inter', sans-serif;
    letter-spacing: -0.075rem;
    margin: 0;
}

.image-container {
    width: 100%;
    display: inline-block;
    margin-bottom: 2.5px;
    overflow: hidden; /* needed to clip the zoomed image */
}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* keeps image proportions clean */
    transition: transform 0.5s ease;
    display: block;
}

.image-container:hover img {
    transform: scale(1.1);
}

.gallery {
    column-count: 3;
    column-gap: 5px;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: rgba(255, 255, 255, 0.831);
  backdrop-filter: blur(10px);
  z-index: 1000;
}

.homebanner {
    width: 100%;
    background: rgba(255, 255, 255, 0.831);
    backdrop-filter: blur(10px);
    margin: auto;
    text-align: center;
    padding: 20px 0;
}


#content {
  margin-top: 5%;
}

.header h1 {
  margin-top: 0;
}

.header-buttons {
  display: flex;
  justify-content: right;
}

.button {
   font-weight: 100;;

  text-align:center;
  font-size:2.9vw;
  padding:10px;
  text-decoration: none;
  transition: all 0.5s;
  color: #000000;
}

.button:hover {
  transition: all 0.5s;
  color: #ffffff;
  text-shadow: #000000 0.6vw 0.6vw 1vw;
}

.logo {
    width: 8%;
    border-radius: 50%;
}

.header-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.image {
    opacity: 0;
    transform: scale(0.1);
    transition: all 0.5s ease;
}

.image.loaded {
    opacity: 1;
    transform: scale(1);
}

.homepageimage {
  background-image: url('Images/IMG_8670.webp');
  background-size: cover;
  background-position: 50% 50%;
  background-attachment: fixed;
}

.section {
    padding: 20px;
    margin: 6%;
    margin-top: 10%;
    border-radius: 10px;
    display: flex; 
}


/* Optional: To control spacing and alignment */
.section img {
  margin-right: 20px; /* Adjust as needed */
  width:40%;
  height: auto; /* Maintain aspect ratio */
}

